examples/expected/check_pipeline_undefined_metric.txt
error[E2006]: undefined metric in pipeline constraints: 'accuracy' not found in validation block
  --> examples/pipeline/undefined_metric.tp:4:5
   |
 4 |     { metric: "accuracy", ge: 0.90 },
   |     ^
